Bug 328696 - plasma-desktop crashes when connecting accounts if loaded activity has contact plasmoid
Summary: plasma-desktop crashes when connecting accounts if loaded activity has contac...
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contact-applet (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: Future
Assignee: Alexandr Akulich
URL: http://pastebin.kde.org/pm2wkqn4g
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-12 07:17 UTC by Jonathan Frederickson
Modified: 2013-12-19 22:24 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace for crash (7.64 KB, text/plain)
2013-12-19 21:19 UTC, Alexandr Akulich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Frederickson 2013-12-12 07:17:00 UTC
If any of the currently loaded activities have a contact plasmoid on them, plasma-desktop crashes when connecting.  Plasmoid must be linked to a contact for this to occur, but the contact does not need to be online.

Reproducible: Always

Steps to Reproduce:
Beginning with presence set to offline:
1. Add a contact plasmoid to the desktop
2. Set presence to online
Actual Results:  
Plasma-desktop crashed (black background, no panels, plasmoids, etc).  Will usually flash the desktop again (looks like it's attempting to reload) but immediately crashes again.  Bug report window pops up after that.
Comment 1 Jonathan Frederickson 2013-12-12 07:20:21 UTC
Whoops, in between those steps to reproduce:
* Link plasmoid to IM contact
Comment 2 Alexandr Akulich 2013-12-19 21:19:03 UTC
Created attachment 84177 [details]
Backtrace for crash
Comment 3 Alexandr Akulich 2013-12-19 22:24:41 UTC
Git commit 1ea924c78070ff07201a61a25f730d2ad8a1db48 by Alexandr Akulich.
Committed on 19/12/2013 at 21:22.
Pushed by akulichalexandr into branch 'master'.

KTp::Contact: Check manager() pointer for null in *Capability() methods.
REVIEW: 114549

M  +7    -7    KTp/contact.cpp

http://commits.kde.org/telepathy-common-internals/1ea924c78070ff07201a61a25f730d2ad8a1db48