KTp::Contact: Check manager() pointer for null in *Capability() methods.

BUG: 328696
REVIEW: 114549